--- a/directbak.yaml
+++ b/directbak.yaml
@@ -880,7 +880,6 @@ payload:
   - '+.109876543210.com'
   - '+.10bests.com'
   - '+.10besty.com'
-  - '+.10danteng.com'
   - '+.10fang.com'
   - '+.10gt.com'
   - '+.10hghg.com'
@@ -2018,13 +2017,11 @@ payload:
   - '+.2016ruanwen.com'
   - '+.2016win10.com'
   - '+.20174555.com'
-  - '+.20176699.com'
   - '+.2017taoke.com'
   - '+.2018jsybh.com'
   - '+.2018zjjly.com'
   - '+.2019cdac.com'
   - '+.2019zjj.com'
-  - '+.2020071703.com'
   - '+.202030.com'
   - '+.2021.com'
   - '+.2029.cc'
@@ -2382,7 +2379,6 @@ payload:
   - '+.263ytx.com'
   - '+.263zw.com'
   - '+.264006.com'
-  - '+.2656000.com'
   - '+.26595.com'
   - '+.265g.com'
   - '+.265o.com'
@@ -3117,7 +3113,6 @@ payload:
   - '+.371.com'
   - '+.371.net'
   - '+.3710167.com'
-  - '+.371414.com'
   - '+.37163.com'
   - '+.37168.com'
   - '+.371fangte.com'
@@ -3352,7 +3347,6 @@ payload:
   - '+.3qhouse.com'
   - '+.3qwe.com'
   - '+.3qzone.com'
-  - '+.3r66.com'
   - '+.3renhe.net'
   - '+.3richman.com'
   - '+.3rkr.com'
@@ -4214,7 +4208,6 @@ payload:
   - '+.51tie.com'
   - '+.51tietu.net'
   - '+.51tijian.com'
-  - '+.51ting.com'
   - '+.51tingyi.com'
   - '+.51toefl.com'
   - '+.51tonglu.com'
@@ -5282,7 +5275,6 @@ payload:
   - '+.61sheji.com'
   - '+.61sou.com'
   - '+.61tg.com'
-  - '+.61vps.com'
   - '+.61xiangce.com'
   - '+.62.com'
   - '+.6210k.com'
@@ -5650,7 +5642,6 @@ payload:
   - '+.71714.com'
   - '+.7172737.com'
   - '+.7176.com'
-  - '+.7190.cc'
   - '+.71908.com'
   - '+.7192.com'
   - '+.71acg.com'
@@ -6755,7 +6746,6 @@ payload:
   - '+.92.net'
   - '+.921.com'
   - '+.9211.com'
-  - '+.921118.wang'
   - '+.921716.com'
   - '+.9217w.com'
   - '+.9217web.com'
@@ -6962,7 +6952,6 @@ payload:
   - '+.962518.com'
   - '+.962600.com'
   - '+.962740.com'
-  - '+.962760.com'
   - '+.96369.net'
   - '+.9637.com'
   - '+.963999.com'
@@ -7042,7 +7031,6 @@ payload:
   - '+.97ui.com'
   - '+.97uimg.com'
   - '+.97wd.com'
-  - '+.97xiaoshuo.com'
   - '+.97xiaoshuo.net'
   - '+.98.com'
   - '+.98.ma'
@@ -7329,7 +7317,6 @@ payload:
   - '+.9yread.com'
   - '+.9yuntu.com'
   - '+.9yuonline.com'
-  - '+.9ywp.com'
   - '+.9zhen.com'
   - '+.9zhitx.com'
   - '+.9zjob.com'
@@ -8462,6 +8449,7 @@ payload:
   - '+.aliyunddos0005.com'
   - '+.aliyunddos0006.com'
   - '+.aliyunddos0010.com'
+  - '+.aliyunddos0017.com'
   - '+.aliyunddos0018.com'
   - '+.aliyunddos0019.com'
   - '+.aliyunddos0020.com'
@@ -9035,7 +9023,6 @@ payload:
   - '+.apizza.net'
   - '+.apjingsi.com'
   - '+.apk3.com'
-  - '+.apk8.com'
   - '+.apkevery.com'
   - '+.apkgu.com'
   - '+.apkplug.com'
@@ -9987,7 +9974,6 @@ payload:
   - '+.bajiehechuang.com'
   - '+.bajintech.com'
   - '+.bajiu.org'
-  - '+.bakaawt.com'
   - '+.bakaxl.com'
   - '+.bakbitionb.com'
   - '+.bakchoi.com'
@@ -10486,7 +10472,6 @@ payload:
   - '+.beatu.net'
   - '+.beautifullinux.com'
   - '+.beautifulzzzz.com'
-  - '+.beautydiarytw.com'
   - '+.bechangedt.com'
   - '+.bedtimepoem.com'
   - '+.beduu.com'
@@ -12016,7 +12001,6 @@ payload:
   - '+.bskuav.com'
   - '+.bsmz.net'
   - '+.bspapp.com'
-  - '+.bspeizi.com'
   - '+.bspia.com'
   - '+.bsrczpw.com'
   - '+.bsrkt.com'
@@ -17361,6 +17345,7 @@ payload:
   - '+.czggsj.com'
   - '+.czgjj.com'
   - '+.czgjj.net'
+  - '+.czgmjsj.com'
   - '+.czgongzuo.com'
   - '+.czie.net'
   - '+.czifi.org'
@@ -19135,7 +19120,6 @@ payload:
   - '+.dockerinfo.net'
   - '+.dockone.io'
   - '+.doclass.com'
-  - '+.docools.com'
   - '+.docpe.com'
   - '+.docs.cdnetworks.com'
   - '+.docs.djicdn.com'
@@ -19409,6 +19393,7 @@ payload:
   - '+.douyinstatic.com'
   - '+.douyinvideo.net'
   - '+.douyinvod.com'
+  - '+.douyinvod.xyz'
   - '+.douyinxiaodian10.com'
   - '+.douyou100.com'
   - '+.douyu.com'
@@ -19915,6 +19900,7 @@ payload:
   - '+.dxjs.com'
   - '+.dxlfile.com'
   - '+.dxlmdd.com'
+  - '+.dxmjinr.com'
   - '+.dxmpay.com'
   - '+.dxmstatic.com'
   - '+.dxpei.com'
@@ -20225,7 +20211,6 @@ payload:
   - '+.eastpharm.com'
   - '+.eastsilver.com'
   - '+.eastsoo.com'
-  - '+.eastsunintl.com'
   - '+.easttone.com'
   - '+.eastups.com'
   - '+.eastwinn.com'
@@ -21231,7 +21216,6 @@ payload:
   - '+.ettbl.org'
   - '+.ettdnsv.com'
   - '+.ettshop.com'
-  - '+.etu3.com'
   - '+.etu6.com'
   - '+.etuan.com'
   - '+.etudu.com'
@@ -22765,7 +22749,6 @@ payload:
   - '+.fqapps.com'
   - '+.fqgj.net'
   - '+.fqis.xin'
-  - '+.fql.cc'
   - '+.fqpai.com'
   - '+.fqsszx.com'
   - '+.fqxs.org'
@@ -23694,7 +23677,6 @@ payload:
   - '+.gdyxc.com'
   - '+.gdzbs.com'
   - '+.gdzhbxg.com'
-  - '+.gdzhlh.com'
   - '+.gdzhongshan.com'
   - '+.gdzp.org'
   - '+.gdzrlj.com'
@@ -26063,7 +26045,6 @@ payload:
   - '+.haozhebao.com'
   - '+.haozhexie.com'
   - '+.haozhuangji.com'
-  - '+.haozhuodao.com'
   - '+.haozi.org'
   - '+.haozi.xyz'
   - '+.haozip.com'
@@ -27193,6 +27174,7 @@ payload:
   - '+.hklongbang.com'
   - '+.hkm168.com'
   - '+.hkmjd.com'
+  - '+.hknet-inc.com'
   - '+.hkpanamie.com'
   - '+.hkpep.com'
   - '+.hkproperty.com'
@@ -27725,7 +27707,6 @@ payload:
   - '+.hp123.com'
   - '+.hp888.com'
   - '+.hpccake.com'
-  - '+.hpcoo.com'
   - '+.hpdwfd2.com'
   - '+.hpoi.net'
   - '+.hpool.online'
@@ -30176,7 +30157,6 @@ payload:
   - '+.imzhongxin.com'
   - '+.in-en.com'
   - '+.in001.com'
-  - '+.in189.com'
   - '+.in66.com'
   - '+.in6way.com'
   - '+.in800.com'
@@ -30602,6 +30582,7 @@ payload:
   - '+.iscrv.com'
   - '+.isdox.com'
   - '+.iseedog.com'
+  - '+.iseekids.com'
   - '+.isenruan.com'
   - '+.iseoku.com'
   - '+.isf.ink'
@@ -35046,7 +35027,6 @@ payload:
   - '+.kymjs.com'
   - '+.kynix.com'
   - '+.kyoceraconnect.com'
-  - '+.kyp565.com'
   - '+.kyppt.com'
   - '+.kyqcfj.com'
   - '+.kytijian.com'
@@ -35514,7 +35494,6 @@ payload:
   - '+.lcouncil.com'
   - '+.lcrcbank.com'
   - '+.lcread.com'
-  - '+.lcshzgy.com'
   - '+.lcsrmyy.com'
   - '+.lcux.net'
   - '+.lcxwfc.com'
@@ -36416,7 +36395,6 @@ payload:
   - '+.linuxde.net'
   - '+.linuxdiyf.com'
   - '+.linuxdot.net'
-  - '+.linuxdown.net'
   - '+.linuxea.com'
   - '+.linuxeden.com'
   - '+.linuxeye.com'
@@ -36534,7 +36512,6 @@ payload:
   - '+.liugj.com'
   - '+.liugm.com'
   - '+.liuguofeng.com'
-  - '+.liuhaipeng.com'
   - '+.liuhaolin.com'
   - '+.liuhu.net'
   - '+.liujiajia.me'
@@ -36890,7 +36867,6 @@ payload:
   - '+.loji.com'
   - '+.loke123.com'
   - '+.lokyi.name'
-  - '+.lol123.net'
   - '+.lol99.com'
   - '+.loldan.com'
   - '+.loldk.com'
@@ -37576,7 +37552,6 @@ payload:
   - '+.lxway.com'
   - '+.lxway.net'
   - '+.lxws.net'
-  - '+.lxxh.cc'
   - '+.lxxm.com'
   - '+.lxy.me'
   - '+.lxybaike.com'
@@ -39747,7 +39722,6 @@ payload:
   - '+.moyublog.com'
   - '+.moyugroup.com'
   - '+.moyumedia.com'
-  - '+.moyunso.com'
   - '+.moz8.com'
   - '+.mozhan.com'
   - '+.mozheanquan.com'
@@ -40446,7 +40420,6 @@ payload:
   - '+.nankaimba.org'
   - '+.nanlebbs.com'
   - '+.nanlive.com'
-  - '+.nanningjie.com'
   - '+.nanoer.net'
   - '+.nanopi.org'
   - '+.nanputuo.com'
@@ -41122,7 +41095,6 @@ payload:
   - '+.njzhzx.net'
   - '+.njzztyl.com'
   - '+.nk84.com'
-  - '+.nkp969.com'
   - '+.nkscdn.com'
   - '+.nktxv.com'
   - '+.nkyp.com'
@@ -41313,7 +41285,6 @@ payload:
   - '+.npoll.net'
   - '+.npp.cc'
   - '+.npxsw.com'
-  - '+.npy858.com'
   - '+.npyun.com'
   - '+.npz.com'
   - '+.nq6.com'
@@ -41500,7 +41471,6 @@ payload:
   - '+.nybaidu.net'
   - '+.nyckidsclub.com'
   - '+.nyist.net'
-  - '+.nyk688.com'
   - '+.nync.com'
   - '+.nypd520.com'
   - '+.nyrsksw.com'
@@ -42256,7 +42226,6 @@ payload:
   - '+.oxrm.com'
   - '+.oxygenos.com'
   - '+.oxyry.com'
-  - '+.oycode.com'
   - '+.oyeahgame.com'
   - '+.oyohyee.com'
   - '+.oyonyou.com'
@@ -42851,7 +42820,6 @@ payload:
   - '+.photopai.com'
   - '+.photops.com'
   - '+.photosanxia.com'
-  - '+.photowoo.com'
   - '+.photoyunnan.com'
   - '+.photozoomchina.com'
   - '+.phouses.com'
@@ -44307,7 +44275,6 @@ payload:
   - '+.qijoe.com'
   - '+.qijuan.com'
   - '+.qijucn.com'
-  - '+.qik339.com'
   - '+.qikan.com'
   - '+.qikanol.com'
   - '+.qikanw.com'
@@ -44319,6 +44286,7 @@ payload:
   - '+.qikuailianwang.com'
   - '+.qikucdn.com'
   - '+.qikula.com'
+  - '+.qikuzx.com'
   - '+.qilang.net'
   - '+.qilanxiaozhu.co'
   - '+.qilanxiaozhu.net'
@@ -44735,6 +44703,7 @@ payload:
   - '+.qmtj.net'
   - '+.qmtk.com'
   - '+.qmtv.com'
+  - '+.qmvj.xyz'
   - '+.qmwtp.com'
   - '+.qmz5.com'
   - '+.qmzs.com'
@@ -45614,7 +45583,6 @@ payload:
   - '+.recoye.com'
   - '+.recuvachina.com'
   - '+.recycle366.com'
-  - '+.red54.com'
   - '+.redatoms.com'
   - '+.redbaby.com'
   - '+.redcome.com'
@@ -46066,7 +46034,6 @@ payload:
   - '+.roszj.com'
   - '+.rotom-x.com'
   - '+.rouding.com'
-  - '+.rouju.org'
   - '+.roukabz.com'
   - '+.round-in.com'
   - '+.roundexpo.com'
@@ -46570,7 +46537,6 @@ payload:
   - '+.sanyexin.com'
   - '+.sanygroup.com'
   - '+.sanyhi.com'
-  - '+.sanyibao.com'
   - '+.sanyipos.com'
   - '+.sanyoutj.com'
   - '+.sanyuanbaobao.com'
@@ -47817,6 +47783,7 @@ payload:
   - '+.shijiexia.com'
   - '+.shijieyouxi.com'
   - '+.shijieyunlian.com'
+  - '+.shijifeifan.com'
   - '+.shijihr.com'
   - '+.shijihulian.com'
   - '+.shijiong.com'
@@ -48149,8 +48116,6 @@ payload:
   - '+.shuaibo.wang'
   - '+.shuaigay.com'
   - '+.shuaigay6.com'
-  - '+.shuaigay7.com'
-  - '+.shuaigay9.com'
   - '+.shuaigeshe.com'
   - '+.shuaihuajun.com'
   - '+.shuaiming.com'
@@ -48366,6 +48331,7 @@ payload:
   - '+.shvlee.com'
   - '+.shwcsh.com'
   - '+.shwdbjgs.com'
+  - '+.shwebspace.com'
   - '+.shweiya.com'
   - '+.shwglm.com'
   - '+.shwpbbs.com'
@@ -50722,6 +50688,7 @@ payload:
   - '+.szseafoodexpo.com'
   - '+.szshequ.org'
   - '+.szshinp.com'
+  - '+.szshjkj.com'
   - '+.szsia.com'
   - '+.szsing.com'
   - '+.szsjtjj.com'
@@ -51966,6 +51933,7 @@ payload:
   - '+.tingroom.com'
   - '+.tingshubao.com'
   - '+.tingshuge.com'
+  - '+.tingsonglaw.com'
   - '+.tingtao.net'
   - '+.tingxiangzu.com'
   - '+.tingyulou.com'
@@ -52813,7 +52781,6 @@ payload:
   - '+.ttyyuuoo.com'
   - '+.ttz.com'
   - '+.ttzhongbao.com'
-  - '+.ttzhushou.com'
   - '+.ttzw.com'
   - '+.ttzw.tv'
   - '+.ttzx.tv'
@@ -53912,6 +53879,7 @@ payload:
   - '+.utogame.com'
   - '+.utom.design'
   - '+.utoper.com'
+  - '+.utopiafar.com'
   - '+.utourworld.com'
   - '+.utovr.com'
   - '+.utransm.com'
@@ -54369,6 +54337,7 @@ payload:
   - '+.vipfengfei.com'
   - '+.vipfengxiao.com'
   - '+.vipfinal.com'
+  - '+.vipglobal.hk'
   - '+.vipgs.net'
   - '+.vipgslb.com'
   - '+.viphxw.com'
@@ -55504,6 +55473,7 @@ payload:
   - '+.weikasen.com'
   - '+.weikd.com'
   - '+.weike.fm'
+  - '+.weikeam.com'
   - '+.weikebaba.net'
   - '+.weikeimg.com'
   - '+.weikejianghu.com'
@@ -56465,7 +56435,6 @@ payload:
   - '+.witspring.com'
   - '+.witt.wang'
   - '+.wiwide.com'
-  - '+.wiyeniao.com'
   - '+.wiz03.com'
   - '+.wizarcan.com'
   - '+.wj-hospital.com'
@@ -56801,7 +56770,6 @@ payload:
   - '+.workerman.net'
   - '+.worklaw.vip'
   - '+.workpcb.com'
-  - '+.worksgz.com'
   - '+.worksoho.com'
   - '+.worktile.com'
   - '+.worktilemail.com'
@@ -58000,7 +57968,6 @@ payload:
   - '+.xiadele.com'
   - '+.xiadts.com'
   - '+.xiadu.com'
-  - '+.xiafandi.com'
   - '+.xiagaoqing.com'
   - '+.xiagepian.com'
   - '+.xiakeol.com'
@@ -60076,6 +60043,7 @@ payload:
   - '+.xzddx.com'
   - '+.xzfi.cc'
   - '+.xzfile.com'
+  - '+.xzforu.com'
   - '+.xzggjyzpw.com'
   - '+.xzgjj.com'
   - '+.xzh200c.shop'
@@ -61371,10 +61339,7 @@ payload:
   - '+.ykedu.net'
   - '+.ykimg.com'
   - '+.ykinvestment.com'
-  - '+.ykn956.com'
-  - '+.ykn966.com'
   - '+.ykntv.com'
-  - '+.ykp568.com'
   - '+.ykplg.com'
   - '+.ykpxxx.com'
   - '+.ykq.ink'
@@ -62146,7 +62111,6 @@ payload:
   - '+.yswlgame.com'
   - '+.yswliot.com'
   - '+.yswpq.com'
-  - '+.yswxcn.com'
   - '+.ysx8.com'
   - '+.ysx8.net'
   - '+.ysx8.vip'
@@ -62821,6 +62785,7 @@ payload:
   - '+.yx643.com'
   - '+.yx7088.com'
   - '+.yx74.com'
+  - '+.yx7507.com'
   - '+.yxbao.com'
   - '+.yxbhhbkj.com'
   - '+.yxbox91.com'
@@ -63042,7 +63007,6 @@ payload:
   - '+.z-index.cc'
   - '+.z-inn.com'
   - '+.z-zhuji.com'
-  - '+.z.hr'
   - '+.z0.cc'
   - '+.z01.com'
   - '+.z0ukun.com'
@@ -63385,6 +63349,7 @@ payload:
   - '+.zg-import.com'
   - '+.zg-imsoft.com'
   - '+.zg114w.com'
+  - '+.zg118.com'
   - '+.zg163.net'
   - '+.zg3721.com'
   - '+.zg388.com'
@@ -63742,6 +63707,7 @@ payload:
   - '+.zhaopins.com'
   - '+.zhaoqianwang.com'
   - '+.zhaoqt.net'
+  - '+.zhaosecha.com'
   - '+.zhaoshang.net'
   - '+.zhaoshang100.com'
   - '+.zhaoshang800.com'
@@ -63864,13 +63830,13 @@ payload:
   - '+.zhenlian.online'
   - '+.zhenlinxin.com'
   - '+.zhenlishen.com'
-  - '+.zhenniu24.com'
   - '+.zhenpin.com'
   - '+.zhenren.com'
   - '+.zhenrongbao.com'
   - '+.zhensoushu.com'
   - '+.zhentan.la'
   - '+.zhenwu.com'
+  - '+.zhenxiad.com'
   - '+.zhenxian.fm'
   - '+.zhenxingkuangchanpin.com'
   - '+.zhenyouhuo.com'
@@ -63920,7 +63886,6 @@ payload:
   - '+.zhib.net'
   - '+.zhibao2car.com'
   - '+.zhibiao8.com'
-  - '+.zhibo.at'
   - '+.zhibo.co'
   - '+.zhibo.me'
   - '+.zhibo.tv'
@@ -65083,6 +65048,7 @@ payload:
   - '+.znyxb.com'
   - '+.znznet.net'
   - '+.zo-l.net'
+  - '+.zoassetmanagement.com'
   - '+.zocai.com'
   - '+.zocodev.com'
   - '+.zodiac.wang'
@@ -65436,7 +65402,6 @@ payload:
   - '+.zuixiaoyao.com'
   - '+.zuixingzuo.net'
   - '+.zuixu.com'
-  - '+.zuixue.com'
   - '+.zuiyou.com'
   - '+.zuiyouxi.com'
   - '+.zujuan.com'
