--- a/directbak.yaml
+++ b/directbak.yaml
@@ -942,7 +942,6 @@ payload:
   - '+.114dns.com'
   - '+.114dns.net'
   - '+.114god.com'
-  - '+.114huoche.com'
   - '+.114hzw.com'
   - '+.114ic.com'
   - '+.114ic.net'
@@ -1327,6 +1326,7 @@ payload:
   - '+.15cdn.com'
   - '+.15gg.com'
   - '+.15gift.com'
+  - '+.15google.com'
   - '+.15hr.com'
   - '+.15in.com'
   - '+.15lu.com'
@@ -2494,6 +2494,7 @@ payload:
   - '+.2g88.vip'
   - '+.2geh.com'
   - '+.2gei.com'
+  - '+.2google.com'
   - '+.2gxw.com'
   - '+.2hanju.com'
   - '+.2hanjutv.com'
@@ -2996,6 +2997,7 @@ payload:
   - '+.364000.com'
   - '+.365128.com'
   - '+.365135.com'
+  - '+.36524hua.com'
   - '+.36543.com'
   - '+.365500.com'
   - '+.365708.com'
@@ -3960,6 +3962,7 @@ payload:
   - '+.51gme.com'
   - '+.51golife.com'
   - '+.51gongxiao.com'
+  - '+.51google.com'
   - '+.51gouke.com'
   - '+.51goupiao.com'
   - '+.51gowan.com'
@@ -4555,6 +4558,7 @@ payload:
   - '+.52samsung.com'
   - '+.52shangou.com'
   - '+.52shici.com'
+  - '+.52shihu.com'
   - '+.52shijing.com'
   - '+.52shipping.com'
   - '+.52shufa.net'
@@ -5225,6 +5229,7 @@ payload:
   - '+.61.com'
   - '+.610115.com'
   - '+.610213.net'
+  - '+.6111.fyi'
   - '+.612.com'
   - '+.6120aa.com'
   - '+.6122.net'
@@ -6909,6 +6914,7 @@ payload:
   - '+.95en.com'
   - '+.95epay.com'
   - '+.95fenapp.com'
+  - '+.95google.com'
   - '+.95gq.com'
   - '+.95jr.com'
   - '+.95k.com'
@@ -9238,7 +9244,6 @@ payload:
   - '+.art-ba-ba.com'
   - '+.art-child.com'
   - '+.art138.com'
-  - '+.art2500.com'
   - '+.art456.com'
   - '+.artacode.com'
   - '+.artbeijing.net'
@@ -9558,6 +9563,7 @@ payload:
   - '+.aw99.com'
   - '+.awaimai.com'
   - '+.awaker.net'
+  - '+.awaliwa.com'
   - '+.awaysoft.com'
   - '+.awbang.com'
   - '+.awc618.com'
@@ -10621,6 +10627,7 @@ payload:
   - '+.benzhb.com'
   - '+.benzhibbs.com'
   - '+.benztu.com'
+  - '+.beook.com'
   - '+.bepal.pro'
   - '+.bequgew.com'
   - '+.bequgezw.com'
@@ -10907,6 +10914,7 @@ payload:
   - '+.bigxiao.com'
   - '+.bigzhong.com'
   - '+.bigzhu.com'
+  - '+.bihe0832.com'
   - '+.bihongbo.com'
   - '+.bihoo.com'
   - '+.bihu-static.com'
@@ -12175,6 +12183,7 @@ payload:
   - '+.bvimg.com'
   - '+.bvseo.com'
   - '+.bw1006.com'
+  - '+.bw3.site'
   - '+.bw30yun.com'
   - '+.bw40.net'
   - '+.bw8848.com'
@@ -12340,6 +12349,7 @@ payload:
   - '+.bzfxw.com'
   - '+.bzgd.com'
   - '+.bzgwl.com'
+  - '+.bzjw.com'
   - '+.bzkad.com'
   - '+.bzko.com'
   - '+.bzmfxz.com'
@@ -12788,6 +12798,7 @@ payload:
   - '+.caylor.cc'
   - '+.cazpw.com'
   - '+.cbca.net'
+  - '+.cbcie.com'
   - '+.cbdio.com'
   - '+.cbdjrsh.org'
   - '+.cbe21.com'
@@ -16350,7 +16361,6 @@ payload:
   - '+.coocaa.com'
   - '+.coocaatv.com'
   - '+.coocare.com'
-  - '+.cooch3d.com'
   - '+.coocox.org'
   - '+.coodir.com'
   - '+.coodub.com'
@@ -16362,6 +16372,7 @@ payload:
   - '+.cookie4you.com'
   - '+.cool-admin.com'
   - '+.cool-de.com'
+  - '+.cool-play.com'
   - '+.cool80.com'
   - '+.coolact.net'
   - '+.coolaf.com'
@@ -20099,6 +20110,7 @@ payload:
   - '+.e3cloud.com'
   - '+.e3ol.com'
   - '+.e4008.com'
+  - '+.e48.xyz'
   - '+.e4asoft.com'
   - '+.e521.com'
   - '+.e5421.com'
@@ -25028,6 +25040,7 @@ payload:
   - '+.guxunw.com'
   - '+.guyuenglish.com'
   - '+.guyungame.com'
+  - '+.guyut.com'
   - '+.guzaosf.com'
   - '+.guzhangting.com'
   - '+.guzhifengds.com'
@@ -25528,7 +25541,6 @@ payload:
   - '+.haima001.com'
   - '+.haimacloud.com'
   - '+.haimawan.com'
-  - '+.haimayisheng.com'
   - '+.haimi.com'
   - '+.haimii.com'
   - '+.haiming-cn.com'
@@ -26988,6 +27000,7 @@ payload:
   - '+.himawari-japan.com'
   - '+.himeidian.com'
   - '+.himengyou.com'
+  - '+.himetoo.com'
   - '+.himigame.com'
   - '+.himiku.com'
   - '+.himofi.com'
@@ -27921,6 +27934,7 @@ payload:
   - '+.htmlplusplus.com'
   - '+.htmlsucai.com'
   - '+.htnice.com'
+  - '+.htoo.vip'
   - '+.htpbc.com'
   - '+.htqyy.com'
   - '+.htranslate.com'
@@ -29854,6 +29868,7 @@ payload:
   - '+.ikoo8.com'
   - '+.ikozn.com'
   - '+.iksea.com'
+  - '+.iku.cool'
   - '+.iku8.com'
   - '+.ikuai8-wifi.com'
   - '+.ikuai8.com'
@@ -31960,6 +31975,7 @@ payload:
   - '+.jindianweb.com'
   - '+.jindidata.com'
   - '+.jindingfm.com'
+  - '+.jindong.org'
   - '+.jindun007.net'
   - '+.jindunfan.com'
   - '+.jinduoduo.net'
@@ -32860,6 +32876,7 @@ payload:
   - '+.jscnc.net'
   - '+.jscqmy.com'
   - '+.jscqt.com'
+  - '+.jscsfc.com'
   - '+.jscssimg.com'
   - '+.jscts.com'
   - '+.jsd.cc'
@@ -33711,6 +33728,7 @@ payload:
   - '+.kanguo.com'
   - '+.kanguowai.com'
   - '+.kangxi55wlsf.com'
+  - '+.kangxidi.com'
   - '+.kangxin.com'
   - '+.kangyueshi.com'
   - '+.kangze.com'
@@ -35243,6 +35261,7 @@ payload:
   - '+.lantaoyu.com'
   - '+.lantian-hotel.com'
   - '+.lantian.tv'
+  - '+.lanting123.com'
   - '+.lantinglou.com'
   - '+.lantingmingjia.com'
   - '+.lanuss.com'
@@ -35374,6 +35393,7 @@ payload:
   - '+.latoooo.com'
   - '+.lattebank.com'
   - '+.lattecake.com'
+  - '+.lattefinance.com'
   - '+.lavago.com'
   - '+.lavandehotels.com'
   - '+.lavapm.com'
@@ -36903,6 +36923,7 @@ payload:
   - '+.longjiazuo.com'
   - '+.longk.com'
   - '+.longmaosoft.com'
+  - '+.longmaoyouxifuwu.com'
   - '+.longmarchspace.com'
   - '+.longmeng.com'
   - '+.longmenmingche.com'
@@ -38174,6 +38195,7 @@ payload:
   - '+.maxlicheng.com'
   - '+.maxok.com'
   - '+.maxpda.com'
+  - '+.maxreader.la'
   - '+.maxreader.net'
   - '+.maxscend.com'
   - '+.maxstv.com'
@@ -39107,6 +39129,7 @@ payload:
   - '+.minxue.net'
   - '+.minyunit.cool'
   - '+.minzu56.net'
+  - '+.miospay.com'
   - '+.miot-spec.org'
   - '+.mipacc.com'
   - '+.mipang.com'
@@ -39625,6 +39648,7 @@ payload:
   - '+.mosesenglish.com'
   - '+.mosgcj.com'
   - '+.mosheng520.com'
+  - '+.moshike.com'
   - '+.moshou.com'
   - '+.moshuanghua.com'
   - '+.moshuqiqiu.com'
@@ -40310,6 +40334,7 @@ payload:
   - '+.n3sd.com'
   - '+.n423.com'
   - '+.n459.com'
+  - '+.n5878.com'
   - '+.n77777777.com'
   - '+.n802.com'
   - '+.n9cn.net'
@@ -41291,6 +41316,7 @@ payload:
   - '+.nsshare.com'
   - '+.nsstream.com'
   - '+.nstooll.com'
+  - '+.nsvdwypg.cyou'
   - '+.nsw88.com'
   - '+.nsw99.com'
   - '+.nswyun.com'
@@ -41326,6 +41352,7 @@ payload:
   - '+.ntwikis.com'
   - '+.ntwzy.com'
   - '+.ntxiru.com'
+  - '+.ntzrj.com'
   - '+.nu1l.com'
   - '+.nuan.io'
   - '+.nuandao.com'
@@ -42371,6 +42398,7 @@ payload:
   - '+.pantrysbest.com'
   - '+.pantum.com'
   - '+.panweizeng.com'
+  - '+.panyoubbs.com'
   - '+.panyun.com'
   - '+.paoao.net'
   - '+.paobuqu.com'
@@ -43133,6 +43161,7 @@ payload:
   - '+.play700.com'
   - '+.play86.com'
   - '+.play910.com'
+  - '+.play920.com'
   - '+.playbeta.net'
   - '+.playcomet.jp'
   - '+.playcrab.com'
@@ -43688,6 +43717,7 @@ payload:
   - '+.py40.com'
   - '+.py6.com'
   - '+.py94.com'
+  - '+.py9p.com'
   - '+.pyadx.com'
   - '+.pyasfunds.com'
   - '+.pychina.org'
@@ -43794,6 +43824,7 @@ payload:
   - '+.qchem.pw'
   - '+.qches.com'
   - '+.qchouses.com'
+  - '+.qcinterfacet.com'
   - '+.qcjkjg.com'
   - '+.qcjslm.com'
   - '+.qckuaizhi.com'
@@ -44148,6 +44179,7 @@ payload:
   - '+.qiaqa.com'
   - '+.qiaqiafood.com'
   - '+.qiawei.com'
+  - '+.qibazaixian.com'
   - '+.qibingdaojia.com'
   - '+.qibo168.com'
   - '+.qibookw.com'
@@ -45819,6 +45851,8 @@ payload:
   - '+.ritarpower.com'
   - '+.ritering.com'
   - '+.rivergame.net'
+  - '+.rixin.cc'
+  - '+.rixin.info'
   - '+.riyuanma.com'
   - '+.riyuexing.org'
   - '+.riyuezhuan.com'
@@ -46441,6 +46475,7 @@ payload:
   - '+.sanguozz.com'
   - '+.sanhao.com'
   - '+.sanhaofushi.com'
+  - '+.sanhaoradio.com'
   - '+.sanhaostreet.com'
   - '+.sanhe-scale.com'
   - '+.sanhucidiao.cc'
@@ -47660,7 +47695,6 @@ payload:
   - '+.sheup.net'
   - '+.shevdc.org'
   - '+.shexiannet.com'
-  - '+.shexun.net'
   - '+.sheyi8.com'
   - '+.sheying001.net'
   - '+.sheyingtg.com'
@@ -48429,6 +48463,7 @@ payload:
   - '+.silkroadtechnologies.com'
   - '+.silksong.me'
   - '+.sillydong.com'
+  - '+.silu020.com'
   - '+.silucar.com'
   - '+.silucg.com'
   - '+.siludao.com'
@@ -50222,6 +50257,7 @@ payload:
   - '+.swiftmi.com'
   - '+.swiftstar.net'
   - '+.swijoy.com'
+  - '+.switchvip.com'
   - '+.swjoy.com'
   - '+.swkong.com'
   - '+.swlidc.com'
@@ -50330,6 +50366,7 @@ payload:
   - '+.sxvt58.com'
   - '+.sxwbs.com'
   - '+.sxwpyx.com'
+  - '+.sxwqhotel.com'
   - '+.sxwrsa.org'
   - '+.sxww.com'
   - '+.sxxdll.com'
@@ -50636,6 +50673,7 @@ payload:
   - '+.szrlqy.com'
   - '+.szrrjc.com'
   - '+.szrtcpa.com'
+  - '+.szryc.com'
   - '+.szschj.com'
   - '+.szsci.net'
   - '+.szscree.com'
@@ -50702,6 +50740,7 @@ payload:
   - '+.szyran.com'
   - '+.szysmpay.com'
   - '+.szyuda88.com'
+  - '+.szyxwdz.com'
   - '+.szyxwkj.com'
   - '+.szyy0373.com'
   - '+.szyyda.com'
@@ -52270,6 +52309,7 @@ payload:
   - '+.topbiz360.com'
   - '+.topbm.com'
   - '+.topbook.cc'
+  - '+.topcdb.com'
   - '+.topcfo.net'
   - '+.topcheer.com'
   - '+.topchitu.com'
@@ -52554,6 +52594,7 @@ payload:
   - '+.trtb.net'
   - '+.trueart.com'
   - '+.truebuty.com'
+  - '+.truechat365.com'
   - '+.trueeyu.com'
   - '+.trueland.net'
   - '+.trueme.net'
@@ -54619,6 +54660,7 @@ payload:
   - '+.vvdoit.com'
   - '+.vvebo.vip'
   - '+.vvfeng.com'
+  - '+.vvgroup.com'
   - '+.vvhan.com'
   - '+.vvic.com'
   - '+.vvipcdn.com'
@@ -55723,7 +55765,6 @@ payload:
   - '+.wenxi777.com'
   - '+.wenxiang.org'
   - '+.wenxiaoyou.com'
-  - '+.wenxingfilter.com'
   - '+.wenxiu.com'
   - '+.wenxiushop.com'
   - '+.wenxue100.com'
@@ -57282,6 +57323,7 @@ payload:
   - '+.wxbrandway.com'
   - '+.wxbsgc.com'
   - '+.wxcha.com'
+  - '+.wxcloudrun.com'
   - '+.wxcsgd.com'
   - '+.wxdgjx.com'
   - '+.wxeditor.com'
@@ -59193,6 +59235,7 @@ payload:
   - '+.xmjyw.com'
   - '+.xmkanshu.com'
   - '+.xml-data.org'
+  - '+.xml-journal.net'
   - '+.xmlhifi.com'
   - '+.xmlure.com'
   - '+.xmluren.com'
@@ -59220,6 +59263,7 @@ payload:
   - '+.xmtbang.com'
   - '+.xmtekic.com'
   - '+.xmttz02.pw'
+  - '+.xmtyy.net'
   - '+.xmtyy02.pw'
   - '+.xmtyy04.pw'
   - '+.xmuchong.com'
@@ -59896,6 +59940,7 @@ payload:
   - '+.xyfcw.com'
   - '+.xyffsb.com'
   - '+.xyfw.org'
+  - '+.xyg688.com'
   - '+.xygmed.com'
   - '+.xygyhd.org'
   - '+.xyhc.com'
@@ -60252,6 +60297,7 @@ payload:
   - '+.yaoliwang.com'
   - '+.yaomaiche.com'
   - '+.yaoman.net'
+  - '+.yaomuzhubao.com'
   - '+.yaonano.com'
   - '+.yaoor.com'
   - '+.yaooxx.space'
@@ -61836,6 +61882,7 @@ payload:
   - '+.youxiputao.com'
   - '+.youxiqiang.com'
   - '+.youxiqun.com'
+  - '+.youxishengdi.com'
   - '+.youxishuo.com'
   - '+.youxitexiao.com'
   - '+.youxituoluo.com'
@@ -61855,6 +61902,7 @@ payload:
   - '+.youyanchu.com'
   - '+.youyannet.com'
   - '+.youyegame.com'
+  - '+.youyi-game.com'
   - '+.youyikeji666.com'
   - '+.youyilm.com'
   - '+.youyiqi.com'
@@ -62915,6 +62963,7 @@ payload:
   - '+.yzgttm.com'
   - '+.yzhbw.net'
   - '+.yzhli.com'
+  - '+.yzhsk.com'
   - '+.yzhtidc.com'
   - '+.yzintelligence.com'
   - '+.yzinter.com'
@@ -63519,6 +63568,7 @@ payload:
   - '+.zhangfensir.com'
   - '+.zhanggang.net'
   - '+.zhanggaoyuan.com'
+  - '+.zhangge.net'
   - '+.zhanggee.com'
   - '+.zhanghaijun.com'
   - '+.zhanghongliang.com'
@@ -64235,7 +64285,6 @@ payload:
   - '+.zhsyb.cc'
   - '+.zhtelecom.com'
   - '+.zhtmid.com'
-  - '+.zhtzvip.com'
   - '+.zhu.cm'
   - '+.zhu360.com'
   - '+.zhu7jie.com'
@@ -64825,6 +64874,7 @@ payload:
   - '+.zkecopro.com'
   - '+.zkeli.com'
   - '+.zkeys.com'
+  - '+.zkh.com'
   - '+.zkh360.com'
   - '+.zkhb.group'
   - '+.zkhcsoft.com'
@@ -64944,6 +64994,7 @@ payload:
   - '+.zmtquan.com'
   - '+.zmumu.com'
   - '+.zmwang.wang'
+  - '+.zmwbf.com'
   - '+.zmwo.com'
   - '+.zmxiaoqu.com'
   - '+.zmxiazai.com'
