--- a/directbak.yaml
+++ b/directbak.yaml
@@ -1022,7 +1022,6 @@ payload:
   - '+.120.net'
   - '+.12011.org'
   - '+.120185.com'
-  - '+.120444.com'
   - '+.120ask.com'
   - '+.120askimages.com'
   - '+.120bjgcyy.org'
@@ -5308,7 +5307,6 @@ payload:
   - '+.65mhxy.com'
   - '+.65singapore.com'
   - '+.65wan.com'
-  - '+.65xs.net'
   - '+.6600.org'
   - '+.66083797.com'
   - '+.660pp.com'
@@ -5458,6 +5456,7 @@ payload:
   - '+.69005a.com'
   - '+.6903.com'
   - '+.69260.com'
+  - '+.6928.info'
   - '+.6934.net'
   - '+.693836.com'
   - '+.693975.com'
@@ -8199,7 +8198,6 @@ payload:
   - '+.ajclass.com'
   - '+.ajebw.com'
   - '+.ajhchem.com'
-  - '+.ajiang.net'
   - '+.ajinga.com'
   - '+.ajiuqian.com'
   - '+.ajkcdn.com'
@@ -10647,6 +10645,7 @@ payload:
   - '+.bestwa.com'
   - '+.bestwehotel.com'
   - '+.bestweshop.com'
+  - '+.bestxtools.com'
   - '+.bestzone.org'
   - '+.bet007.com'
   - '+.bet08365.com'
@@ -16386,6 +16385,7 @@ payload:
   - '+.corachic.com'
   - '+.coralsec.com'
   - '+.corebai.com'
+  - '+.coreesports.net'
   - '+.coreldrawchina.com'
   - '+.corpautohome.com'
   - '+.corpease.net'
@@ -18271,7 +18271,6 @@ payload:
   - '+.dfs800.com'
   - '+.dfshurufa.com'
   - '+.dfshw.com'
-  - '+.dfsjr.com'
   - '+.dfsrcw.com'
   - '+.dfss-club.com'
   - '+.dfstw.com'
@@ -20846,6 +20845,7 @@ payload:
   - '+.ennresearch.com'
   - '+.ennweekly.com'
   - '+.enoya.com'
+  - '+.enp4s0f1.in'
   - '+.enpapers.com'
   - '+.enqoo.com'
   - '+.enread.com'
@@ -22659,6 +22659,7 @@ payload:
   - '+.fqapps.com'
   - '+.fqgj.net'
   - '+.fqis.xin'
+  - '+.fqnovel.com'
   - '+.fqpai.com'
   - '+.fqsszx.com'
   - '+.fqxs.org'
@@ -27322,6 +27323,7 @@ payload:
   - '+.hnztfs.com'
   - '+.hnzxyy.com'
   - '+.hnzycdn.com'
+  - '+.hnzycfc.com'
   - '+.hnzytp.com'
   - '+.hnzyzx.com'
   - '+.hoau.net'
@@ -29124,6 +29126,7 @@ payload:
   - '+.iccsmart.com'
   - '+.iccsz.com'
   - '+.iccwi.net'
+  - '+.icdeal.com'
   - '+.icdn2.com'
   - '+.icdol.com'
   - '+.icdream.com'
@@ -31371,7 +31374,6 @@ payload:
   - '+.jgzyw.com'
   - '+.jh3j.com'
   - '+.jh8k.com'
-  - '+.jhbst.com'
   - '+.jhcb.net'
   - '+.jhcms.com'
   - '+.jhctbank.com'
@@ -34987,6 +34989,7 @@ payload:
   - '+.laisj.com'
   - '+.laituia.com'
   - '+.laituijian.net'
+  - '+.laiwang.com'
   - '+.laiwo.com'
   - '+.laiwu.net'
   - '+.laiwumedia.com'
@@ -37351,7 +37354,6 @@ payload:
   - '+.lvzheng.com'
   - '+.lw0591.com'
   - '+.lw208.com'
-  - '+.lw23.com'
   - '+.lw54.com'
   - '+.lwcj.com'
   - '+.lwd3699.com'
@@ -42782,7 +42784,6 @@ payload:
   - '+.pigjian.com'
   - '+.pigqq.com'
   - '+.pigx.vip'
-  - '+.pigxv.com'
   - '+.pigyun.com'
   - '+.pigzz.com'
   - '+.pihitech.com'
@@ -45258,7 +45259,6 @@ payload:
   - '+.ranwen.tw'
   - '+.ranwena.com'
   - '+.ranwena.net'
-  - '+.ranwenxs.com'
   - '+.ranwenzw.com'
   - '+.ranyi.net'
   - '+.ranzhi.net'
@@ -54556,6 +54556,7 @@ payload:
   - '+.w7000.com'
   - '+.w8xitong.com'
   - '+.w918.com'
+  - '+.wa-lang.org'
   - '+.wa5.com'
   - '+.wa5as4.com'
   - '+.waaaat.com'
@@ -60398,6 +60399,7 @@ payload:
   - '+.yfcloud.com'
   - '+.yfcloud.io'
   - '+.yfcmf.net'
+  - '+.yfdc.net'
   - '+.yfdns.net'
   - '+.yfdts.net'
   - '+.yfdurl.com'
@@ -60497,6 +60499,8 @@ payload:
   - '+.yhz365.com'
   - '+.yhz66.com'
   - '+.yhzdt.com'
+  - '+.yhzky.net'
+  - '+.yhzky1.net'
   - '+.yhzm.cc'
   - '+.yhzm.com'
   - '+.yhzml.com'
@@ -63514,7 +63518,6 @@ payload:
   - '+.zhdchb.com'
   - '+.zhdclink.com'
   - '+.zhdgps.com'
-  - '+.zhdzsw.com'
   - '+.zhe.com'
   - '+.zhe28.com'
   - '+.zhe4000.com'
@@ -63812,7 +63815,6 @@ payload:
   - '+.zhixin-semi.com'
   - '+.zhixingapp.com'
   - '+.zhixingbus.com'
-  - '+.zhixinlu.com'
   - '+.zhixiu.net'
   - '+.zhixuan.com'
   - '+.zhixue.com'
@@ -63910,7 +63912,6 @@ payload:
   - '+.zhongguofeng.com'
   - '+.zhongguohao123.com'
   - '+.zhongguohuo.com'
-  - '+.zhongguojianmenguan.com'
   - '+.zhongguojie.org'
   - '+.zhongguojinrongtouziwang.com'
   - '+.zhongguojixiewang.com'
@@ -64343,7 +64344,6 @@ payload:
   - '+.zikoo.com'
   - '+.ziku123.com'
   - '+.zikui-design.com'
-  - '+.zikuinfo.com'
   - '+.zilanwl.com'
   - '+.zilhua.com'
   - '+.zilian8.com'
