--- a/directbak.yaml
+++ b/directbak.yaml
@@ -143,7 +143,6 @@ payload:
   - '+.021east.com'
   - '+.021fx.com'
   - '+.021gjhb.com'
-  - '+.021hly.org'
   - '+.021ja.com'
   - '+.021jingwei.com'
   - '+.021jingwu.com'
@@ -4672,7 +4671,6 @@ payload:
   - '+.54up.net'
   - '+.54yt.net'
   - '+.54yuqing.com'
-  - '+.54zm.com'
   - '+.55.cc'
   - '+.55.la'
   - '+.55015.com'
@@ -4874,7 +4872,6 @@ payload:
   - '+.58jurenqi.com'
   - '+.58kad.com'
   - '+.58kaifa.com'
-  - '+.58kanshu.cc'
   - '+.58kuaipai.com'
   - '+.58kuku.com'
   - '+.58meizhuo.com'
@@ -5879,6 +5876,7 @@ payload:
   - '+.7dugo.com'
   - '+.7e.hk'
   - '+.7east.com'
+  - '+.7ed.net'
   - '+.7edown.com'
   - '+.7fei.com'
   - '+.7fgame.com'
@@ -5889,6 +5887,7 @@ payload:
   - '+.7gz.com'
   - '+.7hcn.com'
   - '+.7help.net'
+  - '+.7het3grhg.xyz'
   - '+.7ho.com'
   - '+.7hon.com'
   - '+.7huang.org'
@@ -11722,6 +11721,7 @@ payload:
   - '+.bom2buy.com'
   - '+.bomanair.com'
   - '+.bomin-china.com'
+  - '+.bomman.com'
   - '+.bon-top.com'
   - '+.bon-wine.com'
   - '+.bondlady.com'
@@ -12060,6 +12060,7 @@ payload:
   - '+.buildface.com'
   - '+.buildhr.com'
   - '+.buildjob.net'
+  - '+.buildwaterexpo.com'
   - '+.buimg.com'
   - '+.bujie.com'
   - '+.bukamanhua.com'
@@ -15386,7 +15387,6 @@ payload:
   - '+.cmbimg.com'
   - '+.cmbuy10086.com'
   - '+.cmbwinglungbank.com'
-  - '+.cmc168.com'
   - '+.cmcc-ecs.com'
   - '+.cmcc.in'
   - '+.cmcm.com'
@@ -17166,7 +17166,6 @@ payload:
   - '+.cy2009.com'
   - '+.cy52.com'
   - '+.cy580.com'
-  - '+.cy865.com'
   - '+.cy88.com'
   - '+.cy887.com'
   - '+.cyagen.com'
@@ -18382,7 +18381,6 @@ payload:
   - '+.dhygw488.com'
   - '+.dhyjaqa.com'
   - '+.dhyz.net'
-  - '+.dhzw.cc'
   - '+.di3fang.com'
   - '+.di3fang.vip'
   - '+.diablohu.com'
@@ -19517,6 +19515,7 @@ payload:
   - '+.dswmt.com'
   - '+.dswzxh.com'
   - '+.dsxdn.com'
+  - '+.dsxys.com'
   - '+.dsyjz0755.com'
   - '+.dszw.net'
   - '+.dtcash.com'
@@ -21017,7 +21016,6 @@ payload:
   - '+.esemseo.com'
   - '+.esensoft.com'
   - '+.esfimg.com'
-  - '+.eshangxian.com'
   - '+.eshanyao.com'
   - '+.eshenan.com'
   - '+.eshenlin.com'
@@ -22276,6 +22274,7 @@ payload:
   - '+.fishapi.com'
   - '+.fishcn.com'
   - '+.fisherac.com'
+  - '+.fishfay.com'
   - '+.fishing-sinkers.com'
   - '+.fishingbar.net'
   - '+.fishingjoy.com'
@@ -23858,7 +23857,6 @@ payload:
   - '+.ghs.net'
   - '+.ghsmpwalmart.com'
   - '+.ght.me'
-  - '+.ghui.me'
   - '+.ghwgame.com'
   - '+.ghxi.com'
   - '+.ghxsw.com'
@@ -27145,7 +27143,6 @@ payload:
   - '+.hmltec.com'
   - '+.hmnst.com'
   - '+.hmoe.link'
-  - '+.hmpic.xyz'
   - '+.hmplay.com'
   - '+.hmsce.org'
   - '+.hmsem.com'
@@ -27713,7 +27710,6 @@ payload:
   - '+.hs186.com'
   - '+.hs313.info'
   - '+.hs65.com'
-  - '+.hs950.com'
   - '+.hsakyy.com'
   - '+.hsanhl.com'
   - '+.hsay.com'
@@ -28734,6 +28730,7 @@ payload:
   - '+.hyrainbow.com'
   - '+.hysdknb.com'
   - '+.hysec.com'
+  - '+.hysemi-ic.com'
   - '+.hysteeltube.com'
   - '+.hyt368.com'
   - '+.hytcshare.com'
@@ -30548,6 +30545,7 @@ payload:
   - '+.issconline.com'
   - '+.issedu365.com'
   - '+.issjj.com'
+  - '+.ist-zl.com'
   - '+.isthnew.com'
   - '+.istpei.com'
   - '+.istrongcloud.com'
@@ -31188,7 +31186,6 @@ payload:
   - '+.jdapi.com'
   - '+.jdb100.com'
   - '+.jdbbs.com'
-  - '+.jdbbx.com'
   - '+.jdbpcb.com'
   - '+.jdbusiness.com'
   - '+.jdcache.com'
@@ -36748,7 +36745,6 @@ payload:
   - '+.loliyun.vip'
   - '+.loljy.com'
   - '+.lolkeng.com'
-  - '+.lolmanhua.com'
   - '+.lolmax.com'
   - '+.lolmf.com'
   - '+.lolmz.com'
@@ -37223,7 +37219,6 @@ payload:
   - '+.luoohu.com'
   - '+.luooqi.com'
   - '+.luoqiu.com'
-  - '+.luoqiu.info'
   - '+.luoqiuxs.com'
   - '+.luoqiuzw.com'
   - '+.luoqiuzww.com'
@@ -37630,7 +37625,6 @@ payload:
   - '+.madeqr.com'
   - '+.madio.net'
   - '+.madisonboom.com'
-  - '+.madku.com'
   - '+.madmalls.com'
   - '+.madouka.com'
   - '+.madown.com'
@@ -38325,6 +38319,7 @@ payload:
   - '+.meijuba.com'
   - '+.meijucenter.com'
   - '+.meijufans.com'
+  - '+.meijukan.com'
   - '+.meijuniao.com'
   - '+.meijuniao.net'
   - '+.meijuq.com'
@@ -42882,7 +42877,6 @@ payload:
   - '+.pinpaiv.com'
   - '+.pinshan.com'
   - '+.pinshiwen.com'
-  - '+.pinshu.cc'
   - '+.pinshu.com'
   - '+.pinsilianzu1.com'
   - '+.pintour.com'
@@ -45722,7 +45716,6 @@ payload:
   - '+.rl-consult.com'
   - '+.rlair.net'
   - '+.rlbl888.com'
-  - '+.rlhn.xyz'
   - '+.rlkj.com'
   - '+.rlkj.net'
   - '+.rlsofa.net'
@@ -46124,6 +46117,7 @@ payload:
   - '+.rxhui.com'
   - '+.rxian.com'
   - '+.rxjhbaby.com'
+  - '+.rxjiasu.com'
   - '+.rxjt.co'
   - '+.rxjy.com'
   - '+.rxshc.com'
@@ -47079,6 +47073,7 @@ payload:
   - '+.sh-huifeng.com'
   - '+.sh-hywin.com'
   - '+.sh-investment.net'
+  - '+.sh-kechen.com'
   - '+.sh-kr.net'
   - '+.sh-ryjx.com'
   - '+.sh-service.com'
@@ -59892,7 +59887,6 @@ payload:
   - '+.yago-mall.com'
   - '+.yahacode.com'
   - '+.yahaizi.com'
-  - '+.yahei.net'
   - '+.yahoo001.com'
   - '+.yahotab.com'
   - '+.yahuhost.com'
@@ -60671,7 +60665,6 @@ payload:
   - '+.yileyunssp.com'
   - '+.yili.com'
   - '+.yilianmeiti.com'
-  - '+.yilianqing.com'
   - '+.yilianyixue.com'
   - '+.yilibabyclub.com'
   - '+.yilihuo.com'
@@ -60848,6 +60841,7 @@ payload:
   - '+.yinyuemeitu.com'
   - '+.yinyuetai.com'
   - '+.yinyueyouxi.com'
+  - '+.yinzhaowang.com'
   - '+.yinzhijie.com'
   - '+.yinzhizhu.com'
   - '+.yinzifang.com'
@@ -61284,7 +61278,6 @@ payload:
   - '+.ynyes.com'
   - '+.ynyp.com'
   - '+.ynzczs.com'
-  - '+.ynzdhc.com'
   - '+.ynzg.org'
   - '+.ynzp.com'
   - '+.ynzy-tobacco.com'
@@ -61740,7 +61733,6 @@ payload:
   - '+.yoyotown.com'
   - '+.yoyou.com'
   - '+.yoyou.net'
-  - '+.yoyound.com'
   - '+.yoytang.com'
   - '+.yozodcs.com'
   - '+.yozodoc.com'
@@ -62248,7 +62240,6 @@ payload:
   - '+.yunfancdn.net'
   - '+.yunfandns.com'
   - '+.yunfangtan.com'
-  - '+.yunfannet.com'
   - '+.yunfei89.com'
   - '+.yunfutech.com'
   - '+.yungangbj.com'
@@ -62540,7 +62531,6 @@ payload:
   - '+.yx0599.com'
   - '+.yx090.com'
   - '+.yx10011.com'
-  - '+.yx129.com'
   - '+.yx129.net'
   - '+.yx192.com'
   - '+.yx231.com'
@@ -63249,7 +63239,6 @@ payload:
   - '+.zgsydw.com'
   - '+.zgsynews.com'
   - '+.zgszrkdak.com'
-  - '+.zgtcqw.com'
   - '+.zgtghccl.com'
   - '+.zgtianqi.com'
   - '+.zgtjq.com'
@@ -63619,7 +63608,6 @@ payload:
   - '+.zhezheai.com'
   - '+.zhezhekan.com'
   - '+.zhfc.com'
-  - '+.zhfile.com'
   - '+.zhfund.com'
   - '+.zhgc.com'
   - '+.zhgjm.com'
